exports[`test will have a error action 1`] = `
Object {
  "meta": Object {
    "reduxResourcesActionType": "CREATE_RESOURCE_REQUEST_ERROR",
    "resource": "resources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": Array [
    "This is an initial error",
    "This is another error",
  ],
  "type": "CREATE_RESOURCES_REQUEST_ERROR",
}
`;

exports[`test will have a success action 1`] = `
Object {
  "meta": Object {
    "normalizedResponse": Object {
      "entities": Object {
        "resources": Object {
          "resourceId": Object {
            "id": "resourceId",
            "prop1": "initial prop1",
            "prop2": "initial prop2",
          },
        },
      },
      "result": Array [
        "resourceId",
      ],
    },
    "reduxResourcesActionType": "CREATE_RESOURCE_REQUEST_SUCCESS",
    "resource": "resources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": Object {
    "id": "resourceId",
    "prop1": "initial prop1",
    "prop2": "initial prop2",
  },
  "type": "CREATE_RESOURCES_REQUEST_SUCCESS",
}
`;

exports[`test will have an initial action 1`] = `
Object {
  "meta": Object {
    "reduxResourcesActionType": "CREATE_RESOURCE_REQUEST",
    "resource": "resources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": Object {
    "id": "resourceId",
    "prop1": "initial prop1",
    "prop2": "initial prop2",
  },
  "type": "CREATE_RESOURCES_REQUEST",
}
`;
